商圈的新入驻成员关注功能

--- a/app/assets/stylesheets/card_info.css.scss
+++ b/app/assets/stylesheets/card_info.css.scss
@@ -38,7 +38,7 @@
         left: 40px;
       }
 
-      padding-left: 132px;
+      // padding-left: 132px;
       p {
         padding: 10px 0px 0px 0px;
         margin: 0px;
@@ -52,7 +52,8 @@
 
         width: 100px;
         height: 100px;
-        margin-left: -132px;
+        padding-right: 10px;
+        // margin-left: -132px;
       }
     }
 
