--- a/app/views/circles/_circle_template.html.erb
+++ b/app/views/circles/_circle_template.html.erb
@@ -1,7 +1,7 @@
 <div class="circle">
   <a href="<%=path %>/{{id}}/circles">
     <div class='photo'>
-      <img src="{{header_url}}" />
+      <img src="{{ photos.header }}" />
     </div>
     <div class='info'>
       <div>
