--- a/app/views/shop_products/show.dialog.erb
+++ b/app/views/shop_products/show.dialog.erb
@@ -2,7 +2,7 @@
 <% shop = @shop_product.shop %>
 <div class="container shop_product_<%=@shop_product.id %> shop_product_dialog" data-value-id="<%=@shop_product.id %>">
   <!-- 主展示框 -->
-  <div id="main-modal" class="dialog modal shop_product_modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div id="main-modal" class="dialog modal shop_product_modal in fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
       <h3><%= product.name %></h3>
