--- a/app/views/communities/base/_main.html.erb
+++ b/app/views/communities/base/_main.html.erb
@@ -6,7 +6,7 @@
         <div class='widget toolbar'>
           <form class='create_topic'>
             <textarea class='span12' name='content' placeholder='分享新鲜事'></textarea>
-            <div class='row-fluid attachments-panel hide'>
+            <div class='row-fluid attachments-panel' style='display: none;'>
               <div class="reset_avatar main_panle">
                 <div id="image_bottom">
                   <div class="hidden_one" id="hidden_text">
