fixed　添加退货接单功能

--- a/app/views/admins/shops/order_refunds/_card.html.erb
+++ b/app/views/admins/shops/order_refunds/_card.html.erb
@@ -18,7 +18,9 @@
       <div class="page-header">
         <div class="trasaction-title">
           <div class="name"><%= buyer.login %></div>
-          <span class='order_number pull-right'>订单编号：<%=refund.order.number %></span>   
+          <span class='order_number pull-right'>
+            订单编号：<a href="<%=shop_admins_pending_path(current_shop) %>#open/<%=refund.order.id %>/order"><%=refund.order.number %></a>
+          </span>   
         </div>
         <div class="transaction-address">
           <%=refund.order.address.location %>
