--- a/app/views/admins/shops/order_refunds/mini_item.html.erb
+++ b/app/views/admins/shops/order_refunds/mini_item.html.erb
@@ -1,1 +1,1 @@
-<%= render :partial => "order_refunds/mini_row", :locals =>{ :row => @refund } %>
+<%= render :partial => "mini_row", :locals =>{ :row => @refund } %>
