fixed　添加退货接单功能

--- a/app/views/people/order_refunds/_item_header.html.erb
+++ b/app/views/people/order_refunds/_item_header.html.erb
@@ -2,7 +2,7 @@
   <ul class='order_header'>
     <li class='actions'>
       <ul>       
-        <%=render :partial => "order_refunds/operator", :locals => {:operator => row.operator }  %>        
+        <%=render :partial => "operator", :locals => {:operator => row.operator }  %>        
         <li>          
           <a href="javascript:void(0)" class='btn btn-primary btn-mini open operator'>
             <%= icon :open %>打开
