--- a/app/views/people/order_refunds/_mini_row.html.erb
+++ b/app/views/people/order_refunds/_mini_row.html.erb
@@ -1,5 +1,5 @@
 <div class='card_item' data-value-id='<%= row.id %>'>
-  <%=render :partial => "order_refunds/header", :locals => {:row => row } %>
+  <%=render :partial => "item_header", :locals => {:row => row } %>
   <div class='card_item_row widget'>
     <ul class='products'>
       <li class='vertical'>
