--- a/app/views/admins/shops/transactions/_transaction.html.erb
+++ b/app/views/admins/shops/transactions/_transaction.html.erb
@@ -11,5 +11,5 @@
   </div>
 </div>
 <% if transaction.current_operator.nil? %>
-  <div class='invalid-full'>接单之后才可以操作订单？</div>
+  <div class='invalid-full'>接单之后才可以操作订单</div>
 <% end %>
