fix订单打开失败

--- a/app/views/people/order_refunds/index.html.erb
+++ b/app/views/people/order_refunds/index.html.erb
@@ -13,7 +13,7 @@
 
       <div class='threeD-viewport'>
          <div class='refunds card_list'>
-          <%= render :partial => "order_refunds/mini_row", :collection => @refunds, :as => :row %>
+          <%= render :partial => "mini_row", :collection => @refunds, :as => :row %>
         </div>
       </div>
 
