--- a/app/views/people/transactions/completed.html.erb
+++ b/app/views/people/transactions/completed.html.erb
@@ -73,7 +73,7 @@
 
         <div class='threeD-viewport'>
            <div class='refunds card_list'>
-            <%= render :partial => "order_refunds/mini_row", :collection => @refunds, :as => :row %>
+            <%#= render :partial => "order_refunds/mini_row", :collection => @refunds, :as => :row %>
           </div>
         </div>
 
@@ -82,7 +82,7 @@
           <div class='currentbox'></div>
           <div class='downbox'></div>
         </div>
-        <%= paginate @refunds %>
+        <%#= paginate @refunds %>
       </div>
       <div class='refund-detail'></div>
     </div>
