--- a/app/assets/stylesheets/people.css.scss
+++ b/app/assets/stylesheets/people.css.scss
@@ -26,7 +26,7 @@
 @import "direct_transaction";
 @import 'recharges';
 @import 'withdraw_money';
-
+@import "activity";
 
 #people-sidebar.affix-top {
   position: fixed;
