--- a/app/views/people/order_refunds/_card.html.erb
+++ b/app/views/people/order_refunds/_card.html.erb
@@ -25,7 +25,7 @@
           </span>
         </div>
         <div class="transaction-address">
-          <%=seller.address.location %>
+          <%=seller.address.try(:location) %>
         </div>
       </div>
     </div>
