--- a/app/assets/stylesheets/core.css.scss
+++ b/app/assets/stylesheets/core.css.scss
@@ -4,6 +4,7 @@
 @import "caret";
 @import "lib/notify/pnotify";
 @import "lib/transparent";
+@import "lib/mixin";
 @import "lib/jquery.fancybox";
 @import "lib/chosen";
 @import "my_cart";
