--- a/app/views/shops/_user_template.html.erb
+++ b/app/views/shops/_user_template.html.erb
@@ -15,7 +15,7 @@
       <p>{{ower_name }}</p>
     </div>
     <div class="name">
-      {{ login }}
+      商铺 <a href="/shops/{{ name }}">{{ name }}</a>
     </div>
 
     <div class="telephone">
