--- a/app/views/users/_template.html.erb
+++ b/app/views/users/_template.html.erb
@@ -15,7 +15,7 @@
       <p>{{ower_name }}</p>
     </div>
     <div class="name">
-      {{ login }}
+      用户 <a href="/people/{{ login }}">{{ user.login }}</a>
     </div>
 
     <div class="telephone">
