订单打开两次问题

--- a/app/views/admins/shops/transactions/complete.html.erb
+++ b/app/views/admins/shops/transactions/complete.html.erb
@@ -108,35 +108,33 @@
 
 <script type="text/javascript">
   $(function(){
-
     var shop = {
       name: "<%= current_shop.name %>",
       id: "<%= current_shop.id %>",
       token: "<%= current_shop.im_token %>"
     }
 
-    var view = new TransactionComplete()
-
-    var order = new ShopOrderTransactions({
+    var orders = new ShopOrderTransactions({
       el: $(".transaction-list"),
       remote_url: "<%= shop_admins_transactions_path(current_shop) %>",
       shop: shop})
 
-    var direct = new ShopDirectTransactionList({
+    var directs = new ShopDirectTransactionList({
       el: $(".direct_transaction_list"),
       shop: shop,
       remote_url: "<%= shop_admins_direct_transactions_path(current_shop) %>"
     })
 
-    /*var refund = new ShopOrderRefundList({
+    /*var refunds = new ShopOrderRefundList({
       el: $(".order_refund_list"),
       shop: shop,
       remote_url: "<%= shop_admins_order_refunds_path(current_shop) %>"
     })*/
     
-    view.register(order)
-    view.register(direct)
-    // view.register(refund)
+    var view = new TransactionComplete()
+    view.register(orders)
+    view.register(directs)
+    // view.register(refunds)
 
     view.start()
   })
