--- a/app/views/people/banks/_context.html.erb
+++ b/app/views/people/banks/_context.html.erb
@@ -29,7 +29,7 @@
           <div class='span2'>
             帐户
           </div>
-          <div class='span10'>
+          <div class='span10 bank_code'>
             <input type='text' class='span12' name='bank[code]' />
           </div>
         </div>
