--- a/app/views/application/_circle_sidebar.html.erb
+++ b/app/views/application/_circle_sidebar.html.erb
@@ -23,13 +23,13 @@
     </li>
     <% end %>
   </ul>
-  <% if @circle.is_manage?(current_user.id) %>
-    <div class='row-fluid create_category'>
+  <%# if @circle.is_manage?(current_user.id) %>
+   <!--  <div class='row-fluid create_category'>
       <a class="add_category pull-right" href="javascript:void(0)" data-toggle="tooltip" data-placement="top" data-original-title="添加分类">
         <i class=" icon-plus"></i>
       </a>
-    </div>
-  <% end %>
+    </div> -->
+  <%# end %>
   <hr />
   <div class='friends row-fluid'>
     <div>
