--- a/app/views/people/transactions/_waiting_audit_failure.html.erb
+++ b/app/views/people/transactions/_waiting_audit_failure.html.erb
@@ -13,7 +13,7 @@
       </div>
       <div class='span2 title'>汇款单号</div>
       <div class='span6 code'>
-        <input type='text' name='code' class='span12' value='<%=transfer.try(:code) %>' />
+        <input type='text' name='code' class='span12' value='<%=transfer.try(:code_title) %>' />
       </div>
     </div>
     <div class='row-fluid'>
