--- a/app/views/people/transactions/_waiting_transfer.html.erb
+++ b/app/views/people/transactions/_waiting_transfer.html.erb
@@ -4,7 +4,7 @@
     <div class='row-fluid'>
       <div class='span2 title'>汇款单号</div>
       <div class='span10 code'>
-        <input type='text' name='code' class='span12' value='<%=transfer.try(:code) %>' />
+        <input type='text' name='code' class='span12' value='<%=transfer.try(:code_title) %>' />
       </div>
     </div>
     <div class='row-fluid'>
