--- a/app/views/ask_buy/_preview.html.erb
+++ b/app/views/ask_buy/_preview.html.erb
@@ -4,7 +4,7 @@
       <%= image_tag ask_buy.photos.avatar, :class => "preview a-#{ask_buy.id}" %>
     </div>
     <div class='summary'>
-      <h5 class="title"><%= ask_buy.title %> 求购</h5>
+      <h5 class="title href_name"><%= ask_buy.title %> 求购</h5>
       <p class='describe' style=""><%= ask_buy.describe %> </p>
     </div>
     <div class='userinfo'>
