--- a/app/views/shop_products/_preview.html.erb
+++ b/app/views/shop_products/_preview.html.erb
@@ -3,7 +3,7 @@
     <div class='in-box'>
       <%= image_tag shop_product.product.photos.avatar, :class => "preview a-#{shop_product.id}" %>
       <div class='summary'>
-        <h5 class="title"><%= shop_product.product.name %></h5>
+        <h5 class="title href_name"><%= shop_product.product.name %></h5>
         <p><%= shop_product.product.description %></p>
       </div>
     </div>
