--- a/app/views/activities/products/_preview_template.html.erb
+++ b/app/views/activities/products/_preview_template.html.erb
@@ -10,7 +10,7 @@
         {{/photos.avatar}}
       </div>
       <div class='summary'>
-        <h5 class="title">{{name}}</h5>
+        <h5 class="title href_name">{{name}}</h5>
         <p class='describe'>暂无卖家</p>
       </div>
       <div class='userinfo'>
