--- a/app/assets/stylesheets/admins/shops/shop_banks.css.scss
+++ b/app/assets/stylesheets/admins/shops/shop_banks.css.scss
@@ -11,7 +11,7 @@
         margin-bottom: 10px;
         font-weight: bold;
         .span2{
-          text-align: center;
+          text-align: right;
         }
       }
 
