--- a/app/views/people/banks/_context.html.erb
+++ b/app/views/people/banks/_context.html.erb
@@ -4,9 +4,9 @@
     <hr />    
     <%= form_tag remote_url, :class => "bank"  %>
     <div class='row-fluid create_bank'>
-      <div class='span10 bank_info'>
+      <div class='span10 bank_info' style="text-align:right;">
         <div class='row-fluid'>
-          <div class='span2'>
+          <div class='span1'>
             银行
           </div>
           <div class='span4'>
@@ -26,7 +26,7 @@
           </div>
         </div>
         <div class='row-fluid'>
-          <div class='span2'>
+          <div class='span1'>
             帐户
           </div>
           <div class='span10 bank_code'>
