fixed backbone open card

--- a/app/views/people/transactions/base/_express_company.html.erb
+++ b/app/views/people/transactions/base/_express_company.html.erb
@@ -5,7 +5,7 @@
   <div class="span4">
     <%= number_to_currency(transaction.try(:delivery_price)) %>
   </div>
-  <div class='span2 title'>运单号</div>
+  <div class='span2 title'>快递单号</div>
   <div class='span4'>
     <%=transaction.delivery_code %>
   </div>
