--- a/app/views/application/_javascripts.html.erb
+++ b/app/views/application/_javascripts.html.erb
@@ -74,5 +74,9 @@
         $form.replaceWith(xhr.responseText);
       });
     });
+
+    if(!Backbone.History.started){
+      Backbone.history.start()
+    }
   })
 </script>
