--- a/app/views/people/transactions/_waiting_sign.html.erb
+++ b/app/views/people/transactions/_waiting_sign.html.erb
@@ -8,7 +8,7 @@
       <span class='clock' time="<%= transaction.current_state_detail.expired.to_i %>"></span>来确认收货，超时订单自动确认收货
     </div>
   </div>
-  <%=render_base_template "delivery_price", :transaction => transaction %>
+  <%=render_base_template "express_company", :transaction => transaction %>
   <%=render_base_template "manner_and_address", :transaction => transaction %>
 </div>
 <div class="container-fluid">
