--- a/app/assets/stylesheets/transactions/order.css.scss
+++ b/app/assets/stylesheets/transactions/order.css.scss
@@ -103,10 +103,11 @@
 
 
   .card_item_header {
-    margin-bottom: 5px;
+    
     ul.order_header {
       list-style: none;
       margin: 0px;
+      line-height: 25px;
 
       li.actions {
         float: right;
@@ -140,6 +141,10 @@
             }
           }
         }
+      }
+
+      li.title{
+        line-height: 25px;
       }
     }
   }
