--- a/app/views/application/_main_nav-fluid.html.erb
+++ b/app/views/application/_main_nav-fluid.html.erb
@@ -44,7 +44,10 @@
     var $a = $(".activity_select>.active");
     var content_id = $a.find(">a").attr('href')
     var $form = $(".activity_forms>" + content_id + " form");
-
+    validate = new Validate({el: $form});
+    if (!validate.validate){
+      return false;
+    };
     $.ajax({
       type: 'post',
       dataType: 'json',
