--- a/app/assets/stylesheets/core.css.scss
+++ b/app/assets/stylesheets/core.css.scss
@@ -1055,6 +1055,11 @@ body>.model-popup-backdrop.out{
             .comment {
               padding: 0px 20px 10px 60px;
               min-height: 60px;
+
+              .message {
+                word-break: break-all;
+              }
+
               .people-image {
                 margin-left: -60px;
                 float: left;
