--- a/app/views/application/_javascripts.html.erb
+++ b/app/views/application/_javascripts.html.erb
@@ -75,8 +75,10 @@
       });
     });
 
-    if(!Backbone.History.started){
-      Backbone.history.start()
+    window.onload = function(){
+      if(!Backbone.History.started){
+        Backbone.history.start()
+      }  
     }
   })
 </script>
