--- a/app/views/people/followings/_following_shop.html.erb
+++ b/app/views/people/followings/_following_shop.html.erb
@@ -2,11 +2,13 @@
   <% followings.each do |f| %>
     <div class='alert alert-info follow' data-value-id="<%= f.id %>" data-value-follow-id="<%=f.follow_id %>">
       <div class='avatar'>
-        <img src="<%= f.follow.photos.icon %>" class="img-rounded" />
+        <img src="<%= f.follow.try(:photos).try(:icon) %>" class="img-rounded" />
       </div>
       <div class='info'>
-        <div>
-          <%= f.follow.name %>
+        <div class='href_name'>
+          <a href="/shops/<%= f.follow.try(:name) %>" title="<%= f.follow.try(:name) %>">
+            <%= f.follow.try(:name) %>
+          </a>
         </div>
         <div>
           <label class='label label-success unfollow'>
