--- a/app/assets/stylesheets/people.css.scss
+++ b/app/assets/stylesheets/people.css.scss
@@ -515,7 +515,6 @@
   }
 }
 
-
 .manner_wrap{
   .custom_delivery_price{
     display: none;
@@ -526,3 +525,24 @@
     }
   }
 }
+
+.follow-users {
+  .follow {
+    width: 190px;
+
+    .info {
+      max-width: 136px;
+    }
+  }
+}
+
+.follow-shops {
+  .follow {
+    width: 190px;
+
+    .info {
+      max-width: 136px;
+    }
+  }
+}
+
