--- a/app/views/people/withdraw_money/index.html.erb
+++ b/app/views/people/withdraw_money/index.html.erb
@@ -44,8 +44,8 @@
           <input type='text' class='money' name='money' />
           <label class='message'></label>
         </div>
-      </div>
-      <div class='row-fluid item arrive_mode'>
+      </div>      
+<!--       <div class='row-fluid item arrive_mode'>
         <div class='span3'>到帐时间</div>
         <div class='span9'>
           <span>
@@ -56,7 +56,7 @@
             2小时(<a href="javascript:void(0)">收费规则</a>)
           </span>
         </div>
-      </div>
+      </div> -->
       <div class='row-fluid actions'>
         <div class='span3'></div>
         <div class='span9'>
